fixing github icon's misalignment

--- a/css/projelerim.css
+++ b/css/projelerim.css
@@ -1,4 +1,3 @@
-img,
 source {
     /* Vertically center. */
     display: block;
